[workspace]
resolver = "2"

# omiga

# @formatter:off
members = [
    "crates/bean",
    "crates/core",
    "crates/ctx",
    "crates/env",
    "crates/macroattr",
    "crates/macrofn",
    "crates/omiga",
    "crates/tester",
    "crates/testing",
    "crates/tests",
    "crates/web"
]
# @formatter:on
