[workspace]
resolver = "2"

# omiga

# @formatter:off
members = [
    "crates/bean",
    "crates/core",
    "crates/ctx",
    "crates/env",
    "crates/macroattr",
    "crates/macrofn",
    "crates/omiga",
    "crates/tester",
    "crates/testing",
    "crates/tests",
    "crates/web"
]
# @formatter:on

[workspace.dependencies]
chrono = "0.4"
toml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
