[workspace]
resolver = "2"

# omiga

# @formatter:off
members = [
    "crates/app",
    "crates/bean",
    "crates/core",
    "crates/ctx",
    "crates/env",
    "crates/macroattr",
    "crates/macrofn",
    "crates/omiga",
    "crates/tester",
    "crates/testing",
    "crates/tests",
    "crates/web"
]
# @formatter:on

[workspace.dependencies]
# ----------------------------------------------------------------
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# ----------------------------------------------------------------
chrono = "0.4"
toml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
