[package]
name = "omigaenv"
version = "0.1.0"
edition = "2021"

[dependencies]
omigacore = { path = "../core" }
chrono = "0.4"
toml = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
# tomls == toml suffix
tomls = ["toml"]

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["tomls"]
