[package]
name = "omigaenv"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
omigacore = { path = "../core" }
chrono = { workspace = true }
toml = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
chronounit = { workspace = true }

[features]
default = ["tomls"]
# tomls == toml suffix
tomls = ["toml"]

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["tomls"]
