[package]
name = "macroattr"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# ------------------------------------------------
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
# ------------------------------------------------

[lib]
proc-macro = true
