[package]
name = "sigmatests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

publish = false

[dependencies]
omigaapp = { path = "../app" }
omigabean = { path = "../bean" }
omigacore = { path = "../core" }
omigactx = { path = "../ctx" }
omigaenv = { path = "../env" }
macroattr = { path = "../macroattr" }
macrofn = { path = "../macrofn" }
omigatesting = { path = "../testing" }
omigaweb = { path = "../web" }
