[package]
name = "sigma_tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

publish = false

[dependencies]
omiga_app = { path = "../app" }
omiga_bean = { path = "../bean" }
omiga_core = { path = "../core" }
omiga_ctx = { path = "../ctx" }
omiga_env = { path = "../env" }
macro_attr = { path = "../macroattr" }
macro_fn = { path = "../macrofn" }
omiga_testing = { path = "../testing" }
omiga_web = { path = "../web" }
